more minor edits

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -2121,24 +2121,24 @@ specialization relation
 
   \termdefinition{equivalence}
 {\termref{OMS mapping} ensuring that two \termref{OMS} share the
-  same definable concepts}
+  same definable concepts.}
   \begin{note}
     Two OMS are equivalent if they have a common definitional extension.
     The OMS may be written in different OMS languages.
   \end{note}
 
-  \termdefinition{interface signature}{\termref{signature} mediating between an \termref{OMS} and a \termref{module} of that \termref{OMS} in the sense that it contains those non-logical symbols\index{non-logical symbol} that the sentences\index{sentence} of the \termref{module} and the sentences\index{sentence} of the \termref{OMS} have in common}
+  \termdefinition{interface signature}{\termref{signature} mediating between an \termref{OMS} and a \termref{module} of that \termref{OMS} in the sense that it contains those non-logical symbols\index{non-logical symbol} that the sentences\index{sentence} of the \termref{module} and the sentences\index{sentence} of the \termref{OMS} have in common.}
   \begin{note}
-    Adapted from \cite{CuencaGrauEtAl:ExtractingModulesOntologies2007}
+    Adapted from \cite{CuencaGrauEtAl:ExtractingModulesOntologies2007}.
   \end{note}
 
   \termdefinition{module relation}{\termref{OMS mapping} stating that one \termref{OMS} is a \termref{module} of the other one.}
 
   \termdefinition{import}{\termref{OMS mapping} between two
     \termref{OMS} such that one OMS behaves as if it were
-    included into the other; also import of \termref{libraries}}
+    included into the other; also import of \termref{libraries}.}
   \begin{note}
-Semantically, an import of $O_2$ into $O_1$ is equivalent to the verbatim inclusion of $O_2$ in place of the import declaration
+Semantically, an import of $O_2$ into $O_1$ is equivalent to the verbatim inclusion of $O_2$ in place of the import declaration.
   \end{note}
   \begin{note}
     The purpose of $O_2$ importing $O_1$ is to make non-logical symbols and sentences of $O_1$ available in $O_2$.
@@ -2154,21 +2154,21 @@ Semantically, an import of $O_2$ into $O_1$ is equivalent to the verbatim inclus
   \end{note}
   
   \termdefinition{renaming}{assignment of new names
-   to some non-logical symbols\index{non-logical symbol} of an \termref{OMS}}
+   to some non-logical symbols\index{non-logical symbol} of an \termref{OMS}.}
 \begin{note}
 A renaming results in an \termref{OMS mapping} between the
 original and the renamed OMS.
 \end{note}
-  \termdefinition{reduction}{\termref{OMS mapping} reducing an \termref{OMS} to a smaller \termref{signature}}
+  \termdefinition{reduction}{\termref{OMS mapping} reducing an \termref{OMS} to a smaller \termref{signature}.}
 
 \termdefinition{alignment}{flexible \termref{OMS mapping} expressing a collection of semantic
-relations between entities of the two OMS}
+relations between entities of the two OMS.}
 \begin{note}
 Alignments consist of correspondences\index{correspondence}, each of which may have a confidence value. If all
 confidence values are 1, the alignment can be given a formal, logic-based semantics.
 \end{note}
 
- \termdefinition{correspondence}{relationship between an \termref{non-logical symbol} $e_1$ from an \termref{OMS} $O_1$ and an \termref{non-logical symbol} $e_2$ from an OMS $O_2$, or between an \termref{non-logical symbol} $e_1$ from $O_1$ and a \termref{term} $t_2$ formed from non-logical symbols\index{non-logical symbol} from $O_2$
+ \termdefinition{correspondence}{relationship between an \termref{non-logical symbol} $e_1$ from an \termref{OMS} $O_1$ and an \termref{non-logical symbol} $e_2$ from an OMS $O_2$, or between an \termref{non-logical symbol} $e_1$ from $O_1$ and a \termref{term} $t_2$ formed from non-logical symbols\index{non-logical symbol} from $O_2$.
   \begin{note}
 A correspondence is given as a quadruple 
 $(e_1, R, \left\{\begin{array}{c}e_2\\ t_2\end{array}\right\}, c)$,
@@ -2190,10 +2190,10 @@ relation has been explicitly specified; when $c$ is omitted, it defaults to $1$.
   \end{note}
 
   \termdefinition{union}{aggregation of several \termref{OMS}
-    to a new \termref{OMS}, without any renaming}
+    to a new \termref{OMS}, without any renaming.}
 \ednote{\red{why is this here?}}
  
-\termdefinitionLight{\termref{OMS network}\synonym distributed OMS\synonym hyperontology} graph with \termref{OMS} as nodes and OMS mappings\index{OMS mapping} as edges, showing how the OMS are interlinked
+\termdefinitionLight{\termref{OMS network}\synonym distributed OMS\synonym hyperontology} graph with \termref{OMS} as nodes and OMS mappings\index{OMS mapping} as edges, showing how the OMS are interlinked.
 \ednote{Is ``hyperontology'' a synonym for ``OMS network'', or rather for
 ``heterogeneous OMS''?}
 \begin{note}
@@ -2216,7 +2216,7 @@ relation has been explicitly specified; when $c$ is omitted, it defaults to $1$.
 
 
 
-  \termdefinition{combination}{aggregation of all the OMS in an \termref{OMS network}, where \termref{non-logical symbol}s are shared according to the \termref{OMS mapping}s in the OMS network}
+  \termdefinition{combination}{aggregation of all the OMS in an \termref{OMS network}, where \termref{non-logical symbol}s are shared according to the \termref{OMS mapping}s in the OMS network.}
 \begin{example}
 Consider an ontology involving a concept \texttt{Person},
 and another one involving \texttt{Human being}, and an \termref{alignment}
@@ -2226,7 +2226,7 @@ along the alignment, there is only one concept, representing both
 \end{example}
 
  
-  \termdefinition{sharing}{property of \termref{OMS symbols} being mapped to the same symbol when computing a \termref{combination} of an \termref{OMS network}}
+  \termdefinition{sharing}{property of \termref{OMS symbols} being mapped to the same symbol when computing a \termref{combination} of an \termref{OMS network}.}
  \begin{note}
   Sharing is always relative to a given OMS network that
   relates different OMS. That is, two given OMS symbols
@@ -2239,8 +2239,8 @@ along the alignment, there is only one concept, representing both
 \sclause{Features of OMS Languages}
  
 \begin{definitions}
-  \termdefinition{OMS language translation}{mapping from constructs in the source \termref{OMS language} to their equivalents in the target \termref{OMS language}}
-
+  \termdefinition{OMS language translation}{mapping from constructs in the source \termref{OMS language} to their equivalents in the target \termref{OMS language}.}
+%
 \begin{note}
   An OMS language translation shall satisfy the property that the
   result of a translation is a well-formed text in the target
@@ -2249,7 +2249,7 @@ along the alignment, there is only one concept, representing both
 
 \red{
 \termdefinition{OMS language graph}{graph of OMS languages\index{OMS language} and
-OMS language translations\index{language translation}, typically used in a \termref{heterogeneous environment}}
+OMS language translations\index{language translation}, typically used in a \termref{heterogeneous environment}.}
 \begin{note}
   In an OMS language graph, some of the OMS language translations can be
   marked to be default translations\index{default translation}.
@@ -2258,14 +2258,14 @@ OMS language translations\index{language translation}, typically used in a \term
 \termdefinition{default translation}{specially marked \termref{OMS language
     translation} or \termref{logic translation} that will be used
   whenever a translation is needed and no explicit translation is
-  given} 
+  given.} 
 }
 
 \red{
 \termdefinition{heterogeneous environment}{environment for the
   expression of homogeneous and \termref{heterogeneous OMS}, comprising
 a \termref{logic graph}, an \termref{OMS language graph} and a
-\termref{supports relation}}
+\termref{supports relation}.}
 \begin{note}
   Although in principle, there can be many heterogeneous environments,
   for ensuring \termref{interoperability}, there will be a global
@@ -2278,21 +2278,21 @@ OMS languages and serializations.}
 
 
 
-  \termdefinition{sublanguage}{syntactically specified subset of a given language, consisting of a subset of its terminal and nonterminal symbols and grammar rules}
+  \termdefinition{sublanguage}{syntactically specified subset of a given language, consisting of a subset of its terminal and nonterminal symbols and grammar rules.}
 
- \termdefinitionLight{language aspect\index{language aspect ! (general)}}{set of language constructs of a given language, not necessarily forming a sublanguage}
+ \termdefinitionLight{language aspect\index{language aspect ! (general)}}{set of language constructs of a given language, not necessarily forming a sublanguage.}
 
-  \termdefinitionLight{logical language aspect\index{language aspect ! logical}}{the (unique) language aspect of an \termref{OMS language} that enables the expression of non-logical symbols\index{non-logical symbol} and sentences\index{sentence} in a logic}
+  \termdefinitionLight{logical language aspect\index{language aspect ! logical}}{the (unique) language aspect of an \termref{OMS language} that enables the expression of non-logical symbols\index{non-logical symbol} and sentences\index{sentence} in a logic.}
 
 \termdefinitionLight{structuring language aspect\index{language aspect ! structuring}}{the (unique) language aspect of an \termref{OMS language} 
 that covers \termref{structured OMS} as well as the relations of \termref{basic OMS} and \termref{structured OMS} 
 to each other, including, but not limited to {imports}\index{import}, OMS mappings\index{OMS mapping}, conservative extensions\index{conservative extension ! (general)}, 
-and the handling of prefixes for CURIEs}
+and the handling of prefixes for CURIEs.}
 
-  \termdefinitionLight{annotation language aspect\index{language aspect ! annotation}}{the (unique) language aspect of an \termref{OMS language} that enables the  expression of comments and annotations\index{annotation}}
+  \termdefinitionLight{annotation language aspect\index{language aspect ! annotation}}{the (unique) language aspect of an \termref{OMS language} that enables the  expression of comments and annotations\index{annotation}.}
 
   \termdefinition{profile}{(syntactic) \termref{sublanguage} of an \termref{OMS language} interpreting according to a particular \termref{logic}
-that targets specific applications or reasoning methods}
+that targets specific applications or reasoning methods.}
   \begin{example}
     Profiles of OWL 2 include OWL 2 EL, OWL 2 QL, OWL 2 RL, OWL 2 DL, and OWL 2 Full.
   \end{example}
@@ -2312,7 +2312,7 @@ that targets specific applications or reasoning methods}
 \sclause{OMS Language Serializations}
 
 \begin{definitions}
-  \termdefinition{serialization}{specific syntactic encoding of a given \termref{OMS language}}
+  \termdefinition{serialization}{specific syntactic encoding of a given \termref{OMS language}.}
   \begin{note}
     Serializations serve as standard formats for exchanging OMS between tools.
   \end{note}
@@ -2324,17 +2324,17 @@ Common Logic uses the term ``dialect''; the following are standard Common Logic 
   \end{example}
 
 
-   \termdefinition{document}{result of serializing an OMS using a given serialization}
+   \termdefinition{document}{result of serializing an OMS using a given serialization.}
 
 
-  \termdefinition{standoff markup}{way of providing {annotations}\index{annotation} to subjects in external resources, without embedding them into the original resource (here: \termref{OMS})}
+  \termdefinition{standoff markup}{way of providing {annotations}\index{annotation} to subjects in external resources, without embedding them into the original resource (here: \termref{OMS}).}
 \end{definitions}
 
 \sclause{Logic}
 
 \begin{definitions}
   \termdefinition{logic}{specification of valid reasoning that comprises signatures\index{signature}, sentences\index{sentence},
-models \index{model}, and a \termref{satisfaction relation} between models\index{module} and sentences\index{sentence} }
+models \index{model}, and a \termref{satisfaction relation} between models\index{module} and sentences\index{sentence}.}
   \begin{note}
     Most OMS languages have an underlying logic.
   \end{note}
@@ -2350,11 +2350,11 @@ models \index{model}, and a \termref{satisfaction relation} between models\index
   \termdefinition{supports relation}{relation between OMS
       languages\index{OMS language} and logics\index{logic} expressing the \termref{logical
       language aspect} of the former, namely that the constructs of
-    the former lead to a \termref{logical theory} in the latter} 
+    the former lead to a \termref{logical theory} in the latter.} 
 }
 
  \termdefinition{institution}{metaframework mathematically formalizing
-the notion of a \termref{logic}}
+the notion of a \termref{logic}.}
 \begin{note}
  See clause~\ref{c:semantics} for a formal definition.
 \end{note}
@@ -2362,13 +2362,13 @@ the notion of a \termref{logic}}
   \termdefinition{logic translation}{mapping of a source
     \termref{logic} into a target \termref{logic} (mapping
     signatures\index{signature}, sentences\index{sentence} and models\index{model})
-    that keeps or encodes the logical content of \termref{OMS}}
+    that keeps or encodes the logical content of \termref{OMS}.}
 
   \termdefinition{logic reduction}{mapping of a source \termref{logic}
     onto a (usually less expressive) target \termref{logic} (mapping
 	signatures\index{signature}, sentences\index{sentence} and models\index{model})
     that simply forgets those parts of the logical structure not
-    fitting the target \termref{logic}}
+    fitting the target \termref{logic}.}
 
 \termdefinition{theoroidal logic translation} translation that maps 
 signatures of the source logic to theories (i.e.~signatures and sets of sentences)
@@ -2378,11 +2378,11 @@ of the target logic.
  to its first-order axiomatization as a datatype.
 \end{example}
 
-\termdefinition{sublogic}{a \termref{logic} that is a syntactic restriction of another logic, inheriting its semantics}
+\termdefinition{sublogic}{a \termref{logic} that is a syntactic restriction of another logic, inheriting its semantics.}
 
 \red{
 \termdefinition{logic graph}{graph of logics\index{logic}, logic 
-translations\index{logic translation} and logic reductions\index{logic reduction}, typically used in a \termref{heterogeneous environment}}
+translations\index{logic translation} and logic reductions\index{logic reduction}, typically used in a \termref{heterogeneous environment}.}
 \begin{note}
   In a logic graph, some of the logic translations and reductions can be
   marked to be {default translations}\index{default translation}.
@@ -2393,12 +2393,12 @@ translations\index{logic translation} and logic reductions\index{logic reduction
 }
 
 \red{
-  \termdefinition{homogeneous OMS}{\termref{OMS} whose parts are all formulated in one and the same \termref{logic}}
+  \termdefinition{homogeneous OMS}{\termref{OMS} whose parts are all formulated in one and the same \termref{logic}.}
 \begin{note}
 Opposite of \termref{heterogeneous OMS}.
 \end{note}
 
-  \termdefinition{heterogeneous OMS}{\termref{OMS} whose parts are formulated in different logics\index{logic}}
+  \termdefinition{heterogeneous OMS}{\termref{OMS} whose parts are formulated in different logics\index{logic}.}
 \begin{note}
 Opposite of \termref{homogeneous OMS}.
 \end{note}
@@ -2409,7 +2409,7 @@ Opposite of \termref{homogeneous OMS}.
 
 \termdefinition{logic approximation}{mapping of a source \termref{logic} onto a (usually less
 expressive) target \termref{logic} that tries to approximate the OMS expressed in the source
-\termref{logic} with means of the expressivity of the target \termref{logic}}
+\termref{logic} with means of the expressivity of the target \termref{logic}.}
 \begin{note}
   A unique maximal approximation need not exist.
 \end{note}
