--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -4523,6 +4523,8 @@ Symbol               = IRI ;
 SymbolMap            = Symbol , '|->' , Symbol ;
 SymbolOrMap          = Symbol
                      | SymbolMap ;
+Term                 = ($<$)an expression specific to an OMS language($>$) ;
+Sentence             = ($<$)an expression specific to an OMS language($>$) ;
 
 OMSName             = IRI ;
 
