--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -3881,7 +3881,7 @@ some non-logical symbols are hidden, but the semantic effect of sentences involv
   non-logical symbols to be interpreted in a minimal way, while the non-logical symbols declared so far are fixed (alternatively, the non-logical symbols to be minimized and to be varied can be explicitly declared). \red{Variants are
 maximization, freeness (minimizing also data sets and equalities on these), and cofreeness
 (maximizing also data sets and equalities on these),}
-\item \red{the application of a substitution to a sentence.}
+\item \red{the application of a substitution to an OMS.}
 
 
 \end{itemize}
