--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -2161,7 +2161,7 @@ original and the renamed OMS.
 \end{note}
   \termdefinition{reduction}{\termref{OMS mapping} reducing an \termref{OMS} to a smaller \termref{signature}.}
 
-\termdefinition{alignment}{flexible \termref{OMS mapping} expressing a collection of semantic
+\termdefinition{alignment}{an \termref{OMS mapping} expressing a collection of semantic
 relations between entities of the two OMS.}
 \begin{note}
 Alignments consist of correspondences\index{correspondence}, each of which may have a confidence value. If all
@@ -2184,7 +2184,7 @@ relation has been explicitly specified; when $c$ is omitted, it defaults to $1$.
      Not all OMS languages implement logical equivalence.  For example, OWL does not implement logical equivalence in general, but separately implements equivalence relations restricted to individuals (\textit{owl:sameAs}), classes (\textit{owl:equivalentClass}) and properties (\textit{owl:equivalentProperty}).
   \end{note}
 
-  \termdefinition{matching}{algorithmic procedure that generates an \termref{alignment} for two given \termref{OMS}}
+  \termdefinition{matching}{algorithmic procedure that generates an \termref{alignment} for two given \termref{OMS}.}
   \begin{note}
     For both matching and alignment, see \cite{DBLP:books/daglib/0032976,KhanKeet13}.
   \end{note}
