--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -2070,13 +2070,12 @@ non-logical symbols.
 
 
 \termdefinition{approximant}{approximation (in the sense of a logically implied theory, possibly 
-after suitable translation)  of an OMS in a smaller \termref{signature} or
-\termref{OMS language}.}
+after suitable translation)  of an OMS in a smaller \termref{signature} or a \termref{sublanguage}.}
 
 
 \termdefinition{maximum approximant}{
 best possible (in the sense of a maximum set of logical consequences)
-\termref{approximant} of an OMS in a smaller \termref{signature} or \termref{OMS language}.}
+\termref{approximant} of an OMS in a smaller \termref{signature} or a \termref{sublanguage}.}
 \begin{note}
  Technically, a maximum approximant is a uniform interpolant, see \cite{DBLP:conf/ijcai/LutzW11}.
 \end{note}
