--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -2194,8 +2194,7 @@ relation has been explicitly specified; when $c$ is omitted, it defaults to $1$.
 \ednote{Is ``hyperontology'' a synonym for ``OMS network'', or rather for
 ``heterogeneous OMS''?}
 \begin{note}
- The opposite of an OMS network is an \termref{OMS}, which
- focuses on the specification of a single \termref{logical theory}.
+ In \cite{MossakowskiTarlecki09}, a distinction between focused and distributed heterogeneous specifications is made. In the terminology of this standard, this is the distinction between \termref{OMS} and OMS networks.
 \end{note}
   \begin{note}
     An OMS network is a diagram of OMS in the sense of category theory, but different from a diagram
