corrected: 'refined via translation'

--- a/Standard/OMG_OntoIOp_current.tex
+++ b/Standard/OMG_OntoIOp_current.tex
@@ -3289,7 +3289,7 @@ e.g.\ \url{http://www.example.org/uml/atm.xmi}:
 
 \begin{lstlisting}[basicstyle=\ttfamily,language=dolText,morekeywords={props,ObjectProperty,Class,DisjointUnionOf,SubClassOf,Characteristics,Transitive,Asymmetric,SubPropertyOf,DisjointClasses,EquivalentTo,inverse,only,forall,iff,if,or,exists,distributed,refinement,library,via},escapechar=@,mathescape]
 refinement abstract_to_concrete_atm =
-  psm refined via psm2atm to 
+  psm refined via translation psm2atm to 
        {  atm with Idle |-> Idle, CardEntered |-> Idle, 
                    PINEntered |-> Idle, Verified |-> Idle, 
                    Verifying |-> Verifying 
@@ -8255,7 +8255,7 @@ interpretation IRI : OMS to OMS = SymbolMap  & Mereology \\\hline
 interpretation IRI : OMS to OMS = \%cons SymbolMap  &  Engine\\\hline
 interpretation IRI : OMS to OMS = translation IRI  & Mereology \\\hline
 refinement IRI = OMS refined via SymbolMap to OMS & section~\ref{spec-2} \\\hline
-refinement IRI = OMS refined via translation IRI to OMS & section~\ref{model-1} \\\hline
+refinement IRI = OMS refined via translation IRI to OMS & section~\ref{model-2} \\\hline
 refinement IRI = IRI then IRI & section~\ref{spec-2} \\\hline
 refinement IRI = Network refined to Network & section~\ref{model-1} \\\hline
 entailment IRI = OMS entails OMS & PropositionalExamples \\\hline
